Fixing game scroll on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ p, div {
     margin-bottom: 25px;
 }
 
+
 footer {
     margin: 50px 0;
 }
@@ -66,6 +67,7 @@ footer {
     min-height: 67px;
 }
 .game_iframe { width:100%; height:0px; max-width: 1136px; margin: 0px; padding:0px; border:0px; border-bottom: 30px; overflow: hidden;}
+.game_iframe html { overflow: hidden; }
 .game_iframe_container { padding-left: 0px; padding-right: 0px;}
 
 //Scrollbars Chrome (we cant modify them of firefox)
